tests/NormalTests/paczka1/fuzzy1/65956766.err
Error in line 3: B761Sws8 S623 0,j
Error in line 1: XJ1DRs A285 943,8
Error in line 10: qJPXZsF4e S370 65,7
Error in line 8: kVMm3Q A420 70,6
Error in line 13: qJPXZsF4e A285 74,7
Error in line 12: paEiVXcs S370 45,5
Error in line 28: paEiVXcs A420 81,0
Error in line 27: keWd4NrO4 S370 71,1
